# SSMT4-Linux

./: .gitignore  LutheringLaves.py  README.md  components.d.ts  index copy.html  index.html  package-lock.json  package.json  pnpm-lock.yaml  take_screenshots.js  tsconfig.json  version  version-log  vite.config.ts
Windows/: .gitignore  CMakeLists.txt  README.md  build.sh  example-bridge-config.json  toolchain-mingw64.cmake
Windows/include/: bridge_config.h  bridge_contract_generated.h  d3dx_ini_configurator.h  dll_injector.h  game_initializer.h  ini_handler.h  ini_validator.h  local_storage.h  mod_manager.h  package_deployer.h  path_utils.h  process_tracker.h  signature_verifier.h  status_reporter.h  string_utils.h  wwmi_initializer.h  xcmd_handler.h
Windows/src/: bridge_config.cpp  d3dx_ini_configurator.cpp  dll_injector.cpp  game_initializer.cpp  ini_handler.cpp  ini_validator.cpp  local_storage.cpp  main.cpp  mod_manager.cpp  package_deployer.cpp  path_utils.cpp  process_tracker.cpp  signature_verifier.cpp  status_reporter.cpp  string_utils.cpp  wwmi_initializer.cpp  xcmd_handler.cpp
src-tauri/: Cargo.toml  localhost-recording.json  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/Games/: GameIconConfig.json
src-tauri/resources/Games/GenshinImpact/: Config.json
src-tauri/resources/Games/HonkaiImpact3rd/: Config.json
src-tauri/resources/Games/HonkaiStarRail/: Config.json
src-tauri/resources/Games/SnowbreakContainmentZone/: Config.json
src-tauri/resources/Games/WuWa/: Config.json
src-tauri/resources/Games/WutheringWaves/: Config.json
src-tauri/resources/bootstrap/: game_catalog.seed.json  proton_catalog.seed.json
src-tauri/src/: bootstrap.rs  commands.rs  commands_registry.rs  events.rs  lib.rs  main.rs  process_monitor.rs
src-tauri/src/commands/: bridge.rs  bridge_contract_generated.rs  common.rs  game_config.rs  game_downloader.rs  game_launcher.rs  game_log.rs  game_scanner.rs  gamepad.rs  jadeite.rs  log_viewer.rs  mod_manager.rs  process.rs  settings.rs  telemetry.rs  wine_manager.rs
src-tauri/src/commands/bridge/: runtime.rs
src-tauri/src/commands_registry/: common.rs  diagnostics.rs  games.rs  platform.rs  settings.rs
src-tauri/src/configs/: app_config.rs  database.rs  game_config_adapter.rs  game_config_v2.rs  game_identity.rs  game_presets.rs  mod.rs  proton_catalog.rs  wine_config.rs
src-tauri/src/downloader/: cdn.rs  fetcher.rs  full_download.rs  hoyoverse.rs  hoyoverse_download.rs  incremental.rs  mod.rs  progress.rs  snowbreak.rs  snowbreak_download.rs  staging.rs  verifier.rs
src-tauri/src/services/: mod.rs  mod_manager.rs  runtime_config.rs
src-tauri/src/utils/: data_parameters.rs  file_manager.rs  game_dirs.rs  github_releases.rs  hash_verify.rs  ini_manager.rs  logger.rs  migoto_layout.rs  migoto_logs.rs  migoto_packages.rs  mod.rs  runtime_log.rs  trace_event.rs
src-tauri/src/wine/: detector.rs  display.rs  graphics.rs  mod.rs  prefix.rs  runtime.rs
(+233 files in other folders)
