[package]
name = "SSMT4-linux"
version = "0.0.5-beta"
description = "SSMT4 - Linux Game Launcher"
authors = ["you"]
edition = "2021"

[lib]
name = "ssmt4_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "gzip"] }
tokio = { version = "1", features = ["full"] }
zip = "0.6"
futures-util = "0.3"
notify = "8"
sevenz-rust = "0.6"
encoding_rs = "0.8"
trash = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
sha2 = "0.10"
md-5 = "0.10"
which = "7"
walkdir = "2"
flate2 = "1"
tar = "0.4"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
lazy_static = "1.4"
rusqlite = { version = "0.31", features = ["bundled"] }
percent-encoding = "2"
http = "1"
regex = "1"
gilrs = "0.10"
